# pg-upsert

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  example.py  justfile  mkdocs.yml  pg-upsert.example.yaml  pg_upsert.example.yaml  pyproject.toml  requirements.txt  testing.py  zensical.toml
.claude/: project_context.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/linters/: .markdownlint.yml  .ruff.toml  .yaml-lint.yml
.github/workflows/: ci-cd.yml
.linters/: .hadolint.yaml
docs/: architecture.md  conf.py  examples.md  examples.rst  index.md  index.rst  modules.rst  pg_upsert.md  pg_upsert.rst  qa_checks.md
pg_upsert/: __init__.py  __main__.py  __version__.py  _version.py  cli.py  database.py  pg_upsert.py  postgres.py  upsert.py  utils.py
src/pg_upsert/: __init__.py  __main__.py  __version__.py  cli.py  config.py  control.py  display.py  executor.py  export.py  models.py  postgres.py  qa.py  ui.py  ui_base.py  ui_console.py  ui_factory.py  ui_textual.py  ui_tkinter.py  upsert.py  utils.py
src/pg_upsert/ui/: __init__.py  base.py  console.py  diff.py  display.py  factory.py  legacy.py  textual_backend.py  tkinter_backend.py
tests/: conftest.py  data.sql  test_cli.py  test_config.py  test_console_backend.py  test_database.py  test_display.py  test_export.py  test_models.py  test_per_table_excludes.py  test_pg_upsert.py  test_postgres.py  test_ui_diff.py  test_ui_factory.py  test_upsert.py  test_utils.py
tests/data/: schema_failing.sql  schema_passing.sql
