[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg_upsert"
version = "1.11.2"
authors = [{ name = "Caleb Grant", email = "grantcaleb22@gmail.com" }]
description = "A Python library for validating and upserting data into PostgreSQL with automated QA checks."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "psycopg2-binary>=2.9,<3",
    "pyyaml>=6.0.1,<7",
    "rich>=13.0",
    "typer>=0.15,<0.16",
]
keywords = ["postgresql", "postgres", "dbms", "etl", "upsert", "database"]

[project.optional-dependencies]
tui = ["textual>=0.47.0"]
dev = [
    "build",
    "bump-my-version",
    "mkdocstrings-python",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "textual>=0.47.0",
    "tox-uv",
    "twine",
    "zensical",
]

[project.scripts]
pg-upsert = "pg_upsert.cli:app"

[project.urls]
Homepage = "https://pg-upsert.readthedocs.io"
Repository = "https://github.com/geocoug/pg-upsert"
Issues = "https://github.com/geocoug/pg-upsert/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_upsert"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle[error]
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PLE", # pylint errors
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle[warning]
]
ignore = [
    "S101",   # assert used — acceptable in tests
    "B008",   # typer.Option/typer.Argument must be in function defaults
]

[tool.ruff.lint.per-file-ignores]
# Re-exports for public API
"src/pg_upsert/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpversion]
current_version = "1.11.2"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

______________________________________________________________________

## [{new_version}] - {now:%Y-%m-%d}"""

[tool.pytest.ini_options]
addopts = [
    "--cov=pg_upsert",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "-ra",
]
testpaths = ["tests"]
log_cli = true

[tool.coverage.report]
exclude_also = [
    "from .cli import app",
    "if __name__ == .__main__.:",
]
omit = [
    # GUI modules require a display/event loop to test
    "*/pg_upsert/ui/legacy.py",
    "*/pg_upsert/ui/tkinter_backend.py",
    "*/pg_upsert/ui/textual_backend.py",
]

[tool.typos.default.extend-words]
# SQL table alias used throughout upsert templates
ot = "ot"

[tool.tox]
required = ["tox-uv"]
env_list = ["py310", "py311", "py312", "py313", "py314", "build"]
skip_missing_interpreters = true
isolated_build = true

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
extras = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.build]
description = "Build distribution packages"
allowlist_externals = ["pytest"]
commands = [["uv", "build"]]
